ParKotlin.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParKotlin.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProg -> Prog                               (0)
	Integer -> L_integ                                 (1)
	String -> L_quoted                                 (2)
	Ident -> L_ident                                   (3)
	Prog -> ListInst                                   (4)
	Exp -> Exp OpAssign Exp1                           (5)
	Exp -> Exp1                                        (6)
	Exp1 -> Exp3 '?' Exp1 ':' Exp2                     (7)
	Exp1 -> Exp2                                       (8)
	Exp2 -> Exp2 '||' Exp3                             (9)
	Exp2 -> Exp3                                       (10)
	Exp3 -> Exp3 '&&' Exp4                             (11)
	Exp3 -> Exp4                                       (12)
	Exp4 -> Exp4 '==' Exp5                             (13)
	Exp4 -> Exp4 '!=' Exp5                             (14)
	Exp4 -> Exp5                                       (15)
	Exp5 -> Exp5 '<' Exp6                              (16)
	Exp5 -> Exp5 '>' Exp6                              (17)
	Exp5 -> Exp5 '<=' Exp6                             (18)
	Exp5 -> Exp5 '>=' Exp6                             (19)
	Exp5 -> Exp6                                       (20)
	Exp6 -> Exp6 '+' Exp7                              (21)
	Exp6 -> Exp6 '-' Exp7                              (22)
	Exp6 -> Exp7                                       (23)
	Exp7 -> Exp7 '*' Exp8                              (24)
	Exp7 -> Exp7 '/' Exp8                              (25)
	Exp7 -> Exp7 '%' Exp8                              (26)
	Exp7 -> Exp8                                       (27)
	Exp8 -> '-' Exp8                                   (28)
	Exp8 -> '!' Exp8                                   (29)
	Exp8 -> '++' Exp11                                 (30)
	Exp8 -> '--' Exp11                                 (31)
	Exp8 -> Exp9                                       (32)
	Exp9 -> Exp11 '++'                                 (33)
	Exp9 -> Exp11 '--'                                 (34)
	Exp9 -> Exp10                                      (35)
	Exp10 -> 'Tupla' '(' ListExp ')'                   (36)
	Exp10 -> Integer                                   (37)
	Exp10 -> String                                    (38)
	Exp10 -> 'true'                                    (39)
	Exp10 -> 'false'                                   (40)
	Exp10 -> 'null'                                    (41)
	Exp10 -> FunctionExp                               (42)
	Exp10 -> Ident ListDimExp                          (43)
	Exp10 -> '{' ListArg '->' ListStm '}'              (44)
	Exp10 -> Exp11                                     (45)
	Exp11 -> Exp11 '!!'                                (46)
	Exp11 -> Exp12                                     (47)
	Exp12 -> Ident                                     (48)
	Exp12 -> '(' Exp ')'                               (49)
	ListExp ->                                         (50)
	ListExp -> Exp                                     (51)
	ListExp -> Exp ',' ListExp                         (52)
	DimExp -> '[' Exp ']'                              (53)
	ListDimExp -> DimExp                               (54)
	ListDimExp -> DimExp ListDimExp                    (55)
	OpAssign -> '='                                    (56)
	OpAssign -> '+='                                   (57)
	OpAssign -> '-='                                   (58)
	OpAssign -> '*='                                   (59)
	OpAssign -> '/='                                   (60)
	OpAssign -> '%='                                   (61)
	BaseType -> 'Tupla' '<' ListType '>'               (62)
	BaseType -> 'Bool'                                 (63)
	BaseType -> 'Int'                                  (64)
	BaseType -> 'String'                               (65)
	Type -> 'Unit'                                     (66)
	Type -> BaseType '?'                               (67)
	Type -> BaseType                                   (68)
	Type -> '(' ListType ')' '->' BaseType             (69)
	ListType ->                                        (70)
	ListType -> Type                                   (71)
	ListType -> Type ',' ListType                      (72)
	Arg -> Ident ':' Type                              (73)
	ListArg ->                                         (74)
	ListArg -> Arg                                     (75)
	ListArg -> Arg ',' ListArg                         (76)
	Stm -> Dec                                         (77)
	Stm -> Exp ';'                                     (78)
	Stm -> 'run' '{' ListStm '}'                       (79)
	Stm -> 'for' '(' Ident 'in' Iterable ')' '{' ListStm '}'   (80)
	Stm -> 'while' '(' Exp ')' '{' ListStm '}'         (81)
	Stm -> 'break' ';'                                 (82)
	Stm -> 'continue' ';'                              (83)
	Stm -> 'return' Exp ';'                            (84)
	Stm -> 'return' ';'                                (85)
	Stm -> 'if' '(' Exp ')' '{' ListStm '}'            (86)
	Stm -> 'if' '(' Exp ')' '{' ListStm '}' 'else' '{' ListStm '}'   (87)
	Stm -> 'print' '(' Exp ')' ';'                     (88)
	Stm -> 'println' '(' Exp ')' ';'                   (89)
	Stm -> Exp '?.let' '{' ListStm '}'                 (90)
	ListStm ->                                         (91)
	ListStm -> ListStm Stm                             (92)
	Inst -> Dec                                        (93)
	ListInst ->                                        (94)
	ListInst -> ListInst Inst                          (95)
	Dec -> FunctionDec                                 (96)
	Dec -> ArrayDec                                    (97)
	Dec -> 'var' Ident ':' Type '=' Exp ';'            (98)
	Dec -> 'val' Ident ':' Type '=' Exp ';'            (99)
	Dec -> 'var' Ident ':' Type ';'                    (100)
	Dec -> 'val' Ident ':' Type ';'                    (101)
	FunctionDec -> 'fun' Ident '(' ListArg ')' ':' Type '{' ListStm '}'   (102)
	FunctionExp -> Ident '(' ListExp ')'               (103)
	Iterable -> Ident                                  (104)
	Iterable -> Exp '..' Exp                           (105)
	Iterable -> Exp 'until' Exp                        (106)
	Iterable -> Exp 'downTo' Exp                       (107)
	Iterable -> Exp 'until' Exp 'step' Exp             (108)
	Iterable -> Exp 'downTo' Exp 'step' Exp            (109)
	ArrayDec -> 'val' Ident '=' 'Array' '(' Exp ',' Exp ')' ';'   (110)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!!'           { PT _ (TS _ 2) }
	'!='           { PT _ (TS _ 3) }
	'%'            { PT _ (TS _ 4) }
	'%='           { PT _ (TS _ 5) }
	'&&'           { PT _ (TS _ 6) }
	'('            { PT _ (TS _ 7) }
	')'            { PT _ (TS _ 8) }
	'*'            { PT _ (TS _ 9) }
	'*='           { PT _ (TS _ 10) }
	'+'            { PT _ (TS _ 11) }
	'++'           { PT _ (TS _ 12) }
	'+='           { PT _ (TS _ 13) }
	','            { PT _ (TS _ 14) }
	'-'            { PT _ (TS _ 15) }
	'--'           { PT _ (TS _ 16) }
	'-='           { PT _ (TS _ 17) }
	'->'           { PT _ (TS _ 18) }
	'..'           { PT _ (TS _ 19) }
	'/'            { PT _ (TS _ 20) }
	'/='           { PT _ (TS _ 21) }
	':'            { PT _ (TS _ 22) }
	';'            { PT _ (TS _ 23) }
	'<'            { PT _ (TS _ 24) }
	'<='           { PT _ (TS _ 25) }
	'='            { PT _ (TS _ 26) }
	'=='           { PT _ (TS _ 27) }
	'>'            { PT _ (TS _ 28) }
	'>='           { PT _ (TS _ 29) }
	'?'            { PT _ (TS _ 30) }
	'?.let'        { PT _ (TS _ 31) }
	'Array'        { PT _ (TS _ 32) }
	'Bool'         { PT _ (TS _ 33) }
	'Int'          { PT _ (TS _ 34) }
	'String'       { PT _ (TS _ 35) }
	'Tupla'        { PT _ (TS _ 36) }
	'Unit'         { PT _ (TS _ 37) }
	'['            { PT _ (TS _ 38) }
	']'            { PT _ (TS _ 39) }
	'break'        { PT _ (TS _ 40) }
	'continue'     { PT _ (TS _ 41) }
	'downTo'       { PT _ (TS _ 42) }
	'else'         { PT _ (TS _ 43) }
	'false'        { PT _ (TS _ 44) }
	'for'          { PT _ (TS _ 45) }
	'fun'          { PT _ (TS _ 46) }
	'if'           { PT _ (TS _ 47) }
	'in'           { PT _ (TS _ 48) }
	'null'         { PT _ (TS _ 49) }
	'print'        { PT _ (TS _ 50) }
	'println'      { PT _ (TS _ 51) }
	'return'       { PT _ (TS _ 52) }
	'run'          { PT _ (TS _ 53) }
	'step'         { PT _ (TS _ 54) }
	'true'         { PT _ (TS _ 55) }
	'until'        { PT _ (TS _ 56) }
	'val'          { PT _ (TS _ 57) }
	'var'          { PT _ (TS _ 58) }
	'while'        { PT _ (TS _ 59) }
	'{'            { PT _ (TS _ 60) }
	'||'           { PT _ (TS _ 61) }
	'}'            { PT _ (TS _ 62) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }
	L_ident        { PT _ (TV $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProg    rule  0
	Integer         rule  1
	String          rule  2
	Ident           rule  3
	Prog            rule  4
	Exp             rules 5, 6
	Exp1            rules 7, 8
	Exp2            rules 9, 10
	Exp3            rules 11, 12
	Exp4            rules 13, 14, 15
	Exp5            rules 16, 17, 18, 19, 20
	Exp6            rules 21, 22, 23
	Exp7            rules 24, 25, 26, 27
	Exp8            rules 28, 29, 30, 31, 32
	Exp9            rules 33, 34, 35
	Exp10           rules 36, 37, 38, 39, 40, 41, 42, 43, 44, 45
	Exp11           rules 46, 47
	Exp12           rules 48, 49
	ListExp         rules 50, 51, 52
	DimExp          rule  53
	ListDimExp      rules 54, 55
	OpAssign        rules 56, 57, 58, 59, 60, 61
	BaseType        rules 62, 63, 64, 65
	Type            rules 66, 67, 68, 69
	ListType        rules 70, 71, 72
	Arg             rule  73
	ListArg         rules 74, 75, 76
	Stm             rules 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90
	ListStm         rules 91, 92
	Inst            rule  93
	ListInst        rules 94, 95
	Dec             rules 96, 97, 98, 99, 100, 101
	FunctionDec     rule  102
	FunctionExp     rule  103
	Iterable        rules 104, 105, 106, 107, 108, 109
	ArrayDec        rule  110

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'fun'          reduce using rule 94
	'val'          reduce using rule 94
	'var'          reduce using rule 94
	%eof           reduce using rule 94

	Prog           goto state 3
	ListInst       goto state 4

State 1


	L_integ        shift, and enter state 2


State 2

	Integer -> L_integ .                                (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'%='           reduce using rule 1
	'&&'           reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'*='           reduce using rule 1
	'+'            reduce using rule 1
	'+='           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'-='           reduce using rule 1
	'..'           reduce using rule 1
	'/'            reduce using rule 1
	'/='           reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'?'            reduce using rule 1
	'?.let'        reduce using rule 1
	']'            reduce using rule 1
	'downTo'       reduce using rule 1
	'step'         reduce using rule 1
	'until'        reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProg -> Prog .                              (rule 0)

	%eof           accept


State 4

	Prog -> ListInst .                                  (rule 4)
	ListInst -> ListInst . Inst                         (rule 95)

	'fun'          shift, and enter state 9
	'val'          shift, and enter state 10
	'var'          shift, and enter state 11
	%eof           reduce using rule 4

	Inst           goto state 5
	Dec            goto state 6
	FunctionDec    goto state 7
	ArrayDec       goto state 8

State 5

	ListInst -> ListInst Inst .                         (rule 95)

	'fun'          reduce using rule 95
	'val'          reduce using rule 95
	'var'          reduce using rule 95
	%eof           reduce using rule 95


State 6

	Inst -> Dec .                                       (rule 93)

	'fun'          reduce using rule 93
	'val'          reduce using rule 93
	'var'          reduce using rule 93
	%eof           reduce using rule 93


State 7

	Dec -> FunctionDec .                                (rule 96)

	'!'            reduce using rule 96
	'('            reduce using rule 96
	'++'           reduce using rule 96
	'-'            reduce using rule 96
	'--'           reduce using rule 96
	'Tupla'        reduce using rule 96
	'break'        reduce using rule 96
	'continue'     reduce using rule 96
	'false'        reduce using rule 96
	'for'          reduce using rule 96
	'fun'          reduce using rule 96
	'if'           reduce using rule 96
	'null'         reduce using rule 96
	'print'        reduce using rule 96
	'println'      reduce using rule 96
	'return'       reduce using rule 96
	'run'          reduce using rule 96
	'true'         reduce using rule 96
	'val'          reduce using rule 96
	'var'          reduce using rule 96
	'while'        reduce using rule 96
	'{'            reduce using rule 96
	'}'            reduce using rule 96
	L_integ        reduce using rule 96
	L_quoted       reduce using rule 96
	L_ident        reduce using rule 96
	%eof           reduce using rule 96


State 8

	Dec -> ArrayDec .                                   (rule 97)

	'!'            reduce using rule 97
	'('            reduce using rule 97
	'++'           reduce using rule 97
	'-'            reduce using rule 97
	'--'           reduce using rule 97
	'Tupla'        reduce using rule 97
	'break'        reduce using rule 97
	'continue'     reduce using rule 97
	'false'        reduce using rule 97
	'for'          reduce using rule 97
	'fun'          reduce using rule 97
	'if'           reduce using rule 97
	'null'         reduce using rule 97
	'print'        reduce using rule 97
	'println'      reduce using rule 97
	'return'       reduce using rule 97
	'run'          reduce using rule 97
	'true'         reduce using rule 97
	'val'          reduce using rule 97
	'var'          reduce using rule 97
	'while'        reduce using rule 97
	'{'            reduce using rule 97
	'}'            reduce using rule 97
	L_integ        reduce using rule 97
	L_quoted       reduce using rule 97
	L_ident        reduce using rule 97
	%eof           reduce using rule 97


State 9

	FunctionDec -> 'fun' . Ident '(' ListArg ')' ':' Type '{' ListStm '}'    (rule 102)

	L_ident        shift, and enter state 13

	Ident          goto state 15

State 10

	Dec -> 'val' . Ident ':' Type '=' Exp ';'           (rule 99)
	Dec -> 'val' . Ident ':' Type ';'                   (rule 101)
	ArrayDec -> 'val' . Ident '=' 'Array' '(' Exp ',' Exp ')' ';'    (rule 110)

	L_ident        shift, and enter state 13

	Ident          goto state 14

State 11

	Dec -> 'var' . Ident ':' Type '=' Exp ';'           (rule 98)
	Dec -> 'var' . Ident ':' Type ';'                   (rule 100)

	L_ident        shift, and enter state 13

	Ident          goto state 12

State 12

	Dec -> 'var' Ident . ':' Type '=' Exp ';'           (rule 98)
	Dec -> 'var' Ident . ':' Type ';'                   (rule 100)

	':'            shift, and enter state 19


State 13

	Ident -> L_ident .                                  (rule 3)

	'!!'           reduce using rule 3
	'!='           reduce using rule 3
	'%'            reduce using rule 3
	'%='           reduce using rule 3
	'&&'           reduce using rule 3
	'('            reduce using rule 3
	')'            reduce using rule 3
	'*'            reduce using rule 3
	'*='           reduce using rule 3
	'+'            reduce using rule 3
	'++'           reduce using rule 3
	'+='           reduce using rule 3
	','            reduce using rule 3
	'-'            reduce using rule 3
	'--'           reduce using rule 3
	'-='           reduce using rule 3
	'..'           reduce using rule 3
	'/'            reduce using rule 3
	'/='           reduce using rule 3
	':'            reduce using rule 3
	';'            reduce using rule 3
	'<'            reduce using rule 3
	'<='           reduce using rule 3
	'='            reduce using rule 3
	'=='           reduce using rule 3
	'>'            reduce using rule 3
	'>='           reduce using rule 3
	'?'            reduce using rule 3
	'?.let'        reduce using rule 3
	'['            reduce using rule 3
	']'            reduce using rule 3
	'downTo'       reduce using rule 3
	'in'           reduce using rule 3
	'step'         reduce using rule 3
	'until'        reduce using rule 3
	'||'           reduce using rule 3


State 14

	Dec -> 'val' Ident . ':' Type '=' Exp ';'           (rule 99)
	Dec -> 'val' Ident . ':' Type ';'                   (rule 101)
	ArrayDec -> 'val' Ident . '=' 'Array' '(' Exp ',' Exp ')' ';'    (rule 110)

	':'            shift, and enter state 17
	'='            shift, and enter state 18


State 15

	FunctionDec -> 'fun' Ident . '(' ListArg ')' ':' Type '{' ListStm '}'    (rule 102)

	'('            shift, and enter state 16


State 16

	FunctionDec -> 'fun' Ident '(' . ListArg ')' ':' Type '{' ListStm '}'    (rule 102)

	')'            reduce using rule 74
	L_ident        shift, and enter state 13

	Ident          goto state 30
	Arg            goto state 31
	ListArg        goto state 32

State 17

	Dec -> 'val' Ident ':' . Type '=' Exp ';'           (rule 99)
	Dec -> 'val' Ident ':' . Type ';'                   (rule 101)

	'('            shift, and enter state 22
	'Bool'         shift, and enter state 23
	'Int'          shift, and enter state 24
	'String'       shift, and enter state 25
	'Tupla'        shift, and enter state 26
	'Unit'         shift, and enter state 27

	BaseType       goto state 20
	Type           goto state 29

State 18

	ArrayDec -> 'val' Ident '=' . 'Array' '(' Exp ',' Exp ')' ';'    (rule 110)

	'Array'        shift, and enter state 28


State 19

	Dec -> 'var' Ident ':' . Type '=' Exp ';'           (rule 98)
	Dec -> 'var' Ident ':' . Type ';'                   (rule 100)

	'('            shift, and enter state 22
	'Bool'         shift, and enter state 23
	'Int'          shift, and enter state 24
	'String'       shift, and enter state 25
	'Tupla'        shift, and enter state 26
	'Unit'         shift, and enter state 27

	BaseType       goto state 20
	Type           goto state 21

State 20

	Type -> BaseType . '?'                              (rule 67)
	Type -> BaseType .                                  (rule 68)

	')'            reduce using rule 68
	','            reduce using rule 68
	'->'           reduce using rule 68
	';'            reduce using rule 68
	'='            reduce using rule 68
	'>'            reduce using rule 68
	'?'            shift, and enter state 44
	'{'            reduce using rule 68


State 21

	Dec -> 'var' Ident ':' Type . '=' Exp ';'           (rule 98)
	Dec -> 'var' Ident ':' Type . ';'                   (rule 100)

	';'            shift, and enter state 42
	'='            shift, and enter state 43


State 22

	Type -> '(' . ListType ')' '->' BaseType            (rule 69)

	'('            shift, and enter state 22
	')'            reduce using rule 70
	'Bool'         shift, and enter state 23
	'Int'          shift, and enter state 24
	'String'       shift, and enter state 25
	'Tupla'        shift, and enter state 26
	'Unit'         shift, and enter state 27

	BaseType       goto state 20
	Type           goto state 40
	ListType       goto state 41

State 23

	BaseType -> 'Bool' .                                (rule 63)

	')'            reduce using rule 63
	','            reduce using rule 63
	'->'           reduce using rule 63
	';'            reduce using rule 63
	'='            reduce using rule 63
	'>'            reduce using rule 63
	'?'            reduce using rule 63
	'{'            reduce using rule 63


State 24

	BaseType -> 'Int' .                                 (rule 64)

	')'            reduce using rule 64
	','            reduce using rule 64
	'->'           reduce using rule 64
	';'            reduce using rule 64
	'='            reduce using rule 64
	'>'            reduce using rule 64
	'?'            reduce using rule 64
	'{'            reduce using rule 64


State 25

	BaseType -> 'String' .                              (rule 65)

	')'            reduce using rule 65
	','            reduce using rule 65
	'->'           reduce using rule 65
	';'            reduce using rule 65
	'='            reduce using rule 65
	'>'            reduce using rule 65
	'?'            reduce using rule 65
	'{'            reduce using rule 65


State 26

	BaseType -> 'Tupla' . '<' ListType '>'              (rule 62)

	'<'            shift, and enter state 39


State 27

	Type -> 'Unit' .                                    (rule 66)

	')'            reduce using rule 66
	','            reduce using rule 66
	'->'           reduce using rule 66
	';'            reduce using rule 66
	'='            reduce using rule 66
	'>'            reduce using rule 66
	'{'            reduce using rule 66


State 28

	ArrayDec -> 'val' Ident '=' 'Array' . '(' Exp ',' Exp ')' ';'    (rule 110)

	'('            shift, and enter state 38


State 29

	Dec -> 'val' Ident ':' Type . '=' Exp ';'           (rule 99)
	Dec -> 'val' Ident ':' Type . ';'                   (rule 101)

	';'            shift, and enter state 36
	'='            shift, and enter state 37


State 30

	Arg -> Ident . ':' Type                             (rule 73)

	':'            shift, and enter state 35


State 31

	ListArg -> Arg .                                    (rule 75)
	ListArg -> Arg . ',' ListArg                        (rule 76)

	')'            reduce using rule 75
	','            shift, and enter state 34
	'->'           reduce using rule 75


State 32

	FunctionDec -> 'fun' Ident '(' ListArg . ')' ':' Type '{' ListStm '}'    (rule 102)

	')'            shift, and enter state 33


State 33

	FunctionDec -> 'fun' Ident '(' ListArg ')' . ':' Type '{' ListStm '}'    (rule 102)

	':'            shift, and enter state 80


State 34

	ListArg -> Arg ',' . ListArg                        (rule 76)

	')'            reduce using rule 74
	'->'           reduce using rule 74
	L_ident        shift, and enter state 13

	Ident          goto state 30
	Arg            goto state 31
	ListArg        goto state 79

State 35

	Arg -> Ident ':' . Type                             (rule 73)
